# open-unlearning-domain-generation

./: .env_example  .gitignore  CLAUDE.md  debug_config.sh  fix_brazil_config.sh  pyproject.toml  restore_configs.sh  run_brazil_full_training.sh  run_brazil_single_gpu.sh  run_brazil_unlearn.sh  verify_configs.sh
docs/: hydra_config_reference.md  next_steps.md
scripts/: domain-unlearn.sh
scripts/slurm/: README.md  submit_brazil_full.sh
src/data/: __init__.py  unlearn.py  utils.py
src/domain_generation/: config.py  convert_to_dataset.py  main.py  models.py  state.py  utils.py
src/domain_generation/graphs/: __init__.py  article_graph.py  book_graph.py  domain_graph.py
