[project]
name = "open-unlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.34.2",
    "bitsandbytes==0.44.1",
    "datasets==3.0.1",
    "deepspeed==0.15.4",
    "huggingface-hub==0.29.1",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3",
    "numpy==2.2.3",
    "omegaconf>=2.3.0",
    "py-cpuinfo>=9.0.0",
    "rouge-score==0.1.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "tensorboard==2.18.0",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchvision==0.19.1",
    "transformers==4.45.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-openai>=1.0.1",
    "langgraph>=0.2.0",
    "loguru>=0.7.3",
    "lm-eval>=0.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "retrying>=1.3.3",
    "flash-attn",
]
